Enable rollup bypass via Custom Setting, Dev API, or per-rollup Cust Perm

--- a/dlrs/main/layouts/LookupRollupSummary2__mdt-Lookup Rollup Summary Layout.layout-meta.xml
+++ b/dlrs/main/layouts/LookupRollupSummary2__mdt-Lookup Rollup Summary Layout.layout-meta.xml
@@ -169,6 +169,10 @@
                 <behavior>Edit</behavior>
                 <field>TestCodeSeeAllData__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>BypassPermissionApiName__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>OneColumn</style>
     </layoutSections>
